--- a/src/quizData/templates/quizData/response_table.html
+++ b/src/quizData/templates/quizData/response_table.html
@@ -1,10 +1,10 @@
-<div id="table" class="bg-white  p-3 rounded">
-    <div class="">
+<div id="table" class="col-lg-9 mx-auto rounded my-5">
+    <a type="button" class="mb-2" href="{% url 'dashboard_home' %}">< Back</a>
+    <div class="bg-white p-5">
         
         <script src="https://code.jquery.com/jquery-3.6.4.slim.min.js" integrity="sha256-a2yjHM4jnF9f54xUQakjZGaqYs/V1CYvWpoqZzC2/Bw=" crossorigin="anonymous"></script>
         
         
-        <a type="button" class="m-4" href="{% url 'dashboard_home' %}">< Back</a>
         
         <div class="row">
             <div class="col-12">
@@ -15,7 +15,7 @@
                 Download all responses as CSV <i class="fa fa-download"></i></a>
             </div>
         </div>
-    <div class="row mt-4 mx-aut-" style="gap:1.5rem;justify-content: center;">
+    <div class="row  mx-auto" style="gap:1.5rem;justify-content: center;">
 
         <div class="col-6 col-sm-12 mx-3" style="display: contents;">
             <div class="widget-stat card bg-primary p-1">
