--- a/src/templates/dashboard2/index.html
+++ b/src/templates/dashboard2/index.html
@@ -86,7 +86,7 @@
             </div>
         </div> {% endcomment %}
         <div class="col-xl-6 col-xxl-12">
-            <div class="card">
+            <div class="card col-lg-9 mx-auto justify-content-center my-5" >
                 <div class="card-header d-sm-flex d-block pb-0 border-0">
                     <div class="mr-auto pr-3 mb-sm-0 mb-3">
                         <h4 class="text-black fs-20"></h4>
