--- a/src/quizCreation/templates/element_forms/AddRowAgreeDisagreeModal.html
+++ b/src/quizCreation/templates/element_forms/AddRowAgreeDisagreeModal.html
@@ -12,6 +12,7 @@
                 <table class="table">
                     <thead>
                         <tr>
+                            <th>Question number</th>
                             <th>Question title</th>
                             <th>Delete</th>
                         </tr>
@@ -21,6 +22,7 @@
                         {% for choice in choices %}
                             <tr>
                               
+                                <td>{{choice.position}}</td>
 
                                 <td><div class="d-flex align-items-left">{{choice.title}}</div></td>
                          
@@ -50,7 +52,7 @@
             hx-encoding="multipart/form-data"
         >
             <div class="input-group my-2">
-                <input type="text" name="choice_name" class="form-control" maxlength="50" placeholder="Enter a name for your choice">
+                <textarea type="text" name="choice_name" class="form-control" maxlength="5000" columns=30 rows=10 placeholder="Enter your question here"></textarea>
                 <div class="input-group-append">
                     <button style="top:-3px" class="btn btn-primary site-button" type="submit">Add</button>
                 </div>
