--- a/src/templates/dashboard2/includes/header.html
+++ b/src/templates/dashboard2/includes/header.html
@@ -303,7 +303,7 @@
         ***********************************-->
         <div class="content-body">
                 <!-- row -->
-            <div class="container-fluid">
+            <div class="">
 
                 {% if messages %}
                     {% autoescape off %}
