--- a/src/quizCreation/templates/create_quiz.html
+++ b/src/quizCreation/templates/create_quiz.html
@@ -5,7 +5,7 @@
 
     <div id="createQuiz">
 
-    <div class="card my-5 col-lg-9 mx-auto px-3 w-90">
+    <div class="card my-5 col-lg-9 mx-auto px-3 ">
         <div class="card-body">
 
         <form class="my-2 mx-auto"
