--- a/src/quizCreation/templates/quiz_creation/quizes_list.html
+++ b/src/quizCreation/templates/quiz_creation/quizes_list.html
@@ -61,7 +61,8 @@
                                 >
                                     Delete
                                 </a>
-                                <h4 class="mt-3 ">
+                                <br>
+                                <h4 class="mt-5 pt-2">
                                     <small>Quiz name:</small>
                                     
                                     <p class="">{{quiz.name}}</p></h4>
