Improve frontend design

--- a/src/quizCreation/templates/quiz_creation/quizes_list.html
+++ b/src/quizCreation/templates/quiz_creation/quizes_list.html
@@ -31,7 +31,7 @@
                                 -webkit-transition: all 0.5s;
                                 -ms-transition: all 0.5s;
                                 transition: all 0.5s;
-                               " class="plan-list list-row d-sm-flex d-block  py-3 list-row align-items-center my-5 col-lg-9 mx-auto justify-content-center">
+                               " class="shadow  d-sm-flex d-block  py-3 list-row align-items-center my-5 col-lg-9 mx-auto justify-content-center">
 
                         <div class="d-flex align-items-center">
 
