--- a/src/quizCreation/templates/questions_page.html
+++ b/src/quizCreation/templates/questions_page.html
@@ -6,26 +6,17 @@
     <div class="col-xl-12 my-5">
         <a class="mb-1" href="{% url 'dashboard_home' %}">
     
-            <span class="">< Editing quiz: {{user_quiz.name}}</span>
+            <span class="">< Back</span>
         </a>
         <div class="card ">
-            <div class="card-header d-sm-flex flex-wrap d-block pb-0 border-0">
-             
-                    {% comment %} <div class="card-action card-tabs mr-4 mt-3 mt-sm-0 mb-3">
-                        <ul class="nav nav-tabs" role="tablist">
-                            <li class="nav-item">
-                                <a class="nav-link" data-toggle="tab" href="#All" role="tab" aria-selected="false">All</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" data-toggle="tab" href="#Unifinshed" role="tab" aria-selected="true">Unifinshed</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" data-toggle="tab" href="#Finished" role="tab">Finished</a>
-                            </li>
-                        </ul>
-                    </div> {% endcomment %}
+            
+               <div class="m-3">
+                   <h4 class="text-black fs-20"></h4>
+                   <p class="fs-13 mb-0 text-black">Editing quiz: {{user_quiz.name}}</p>
+               </div>
+            <div class="card-header d-sm-flex flex-wrap d-block pb-0 border-0 ">
 
-                <button type="button" class="btn btn-primary mb-2 float-left" data-toggle="modal" data-target="#exampleModalCenter">Add quiz page</button>
+                <button type="button" class="btn btn-primary site-button" data-toggle="modal" data-target="#exampleModalCenter">Add quiz page</button>
                 {% comment %} <a target="_blank" href="{% if request.is_secure %}https://{% else %}http://{% endif %}{{request.get_host}}{% url 'preview_quiz' user_quiz.id %}" type="button" class="btn  mb-2 mr-2">View quiz preview</a> {% endcomment %}
 
 
@@ -89,89 +80,84 @@
                 <div class="tab-pane active show fade" id="Unifinshed">
                     {% for page in quiz_pages %}
 
-                        <div style="background-color:rgba(227, 227, 204, 0.3)" class="d-flex border-bottom flex-wrap py-3 list-row align-items-center mb-2">
-
-                            <div class="col-xl-5 col-xxl-8 col-lg-6 col-sm-8 d-flex align-items-center">
-                                <div class="list-icon mr-3 mb-3">
-                                    <p type="button"
-                                       hx-get={% url 'move_page_up' user_quiz.id page.id %}
-                                       hx-target='#pagesList'
-                                       hx-swap=outerHTML
-                                       class="site-color fs-20 mb-0 mt-2"><i class="fa fa-chevron-up"></i></p>
-                                    <p type="button"
-                                       hx-get={% url 'move_page_down' user_quiz.id page.id %}
-                                       hx-target='#pagesList'
-                                       hx-swap=outerHTML
-                                       class="site-color fs-20 mb-0 mt-2"><i class="fa fa-chevron-down"></i></p>
+                        <div class=" rounded shadow-lg my-5  " style="background-color:rgba(227, 227, 204, 0.3)">
 
 
+                            <div  class="d-flex  flex-wrap py-3 list-row align-items-center mb-2">
+
+                                <div class="col-xl-5 col-xxl-8 col-lg-6 col-sm-8 d-flex align-items-center">
+                                    <div class="list-icon mr-3 mb-3">
+                                        <p type="button"
+                                        hx-get={% url 'move_page_up' user_quiz.id page.id %}
+                                        hx-target='#pagesList'
+                                        hx-swap=outerHTML
+                                        class="site-color fs-20 mb-0 mt-2"><i class="fa fa-chevron-up"></i></p>
+                                        <p type="button"
+                                        hx-get={% url 'move_page_down' user_quiz.id page.id %}
+                                        hx-target='#pagesList'
+                                        hx-swap=outerHTML
+                                        class="site-color fs-20 mb-0 mt-2"><i class="fa fa-chevron-down"></i></p>
+
+
+                                    </div>
+                                    <div class="info ">
+                                        <h4 class=""><p class="text-black">{{page.number}}. {{page.title}}</p></h4>
+                                        {% comment %} <p>This page will always be shown as it has no conditions attached</p> {% endcomment %}
+                                    </div>
                                 </div>
-                                <div class="info ">
-                                    <h4 class=""><p class="text-black">{{page.number}}. {{page.title}}</p></h4>
-                                    {% comment %} <p>This page will always be shown as it has no conditions attached</p> {% endcomment %}
-                                </div>
-                            </div>
-                            <div class="ml-auto pr-4">
+                                <div class="ml-auto pr-4">
 
-                                <a class=" btn btn-primary site-button mb-2" href="{% url 'quiz_page_edit' user_quiz.id page.id %}">
-                                    <span >Edit <i class="fa fa-edit"></i></span>
+                                    <a class=" btn btn-primary site-button mb-2" href="{% url 'quiz_page_edit' user_quiz.id page.id %}">
+                                        <span >Edit <i class="fa fa-edit"></i></span>
+                                    </a>
+
+                                    <a href="#" class="mt-3"
+                                    hx-delete={% url 'delete_quiz_page' user_quiz.id page.id %}
+                                    hx-target='#pagesList'
+                                    hx-swap=outerHTML
+                                    hx-confirm="Are you sure you wish to delete the page {{page.name}}"
+                                    >
+                                        <div class="  text-danger text-right" style="border:3px  solid transparent!important;"> Delete <i class="fa fa-trash"></i></div>
+                                    </div>
+
                                 </a>
 
-                                <a href="#" class="mt-3"
-                                   hx-delete={% url 'delete_quiz_page' user_quiz.id page.id %}
-                                   hx-target='#pagesList'
-                                   hx-swap=outerHTML
-                                   hx-confirm="Are you sure you wish to delete the page {{page.name}}"
-                                >
-                                    <div class="  text-danger text-right" style="border:3px  solid transparent!important;"> Delete <i class="fa fa-trash"></i></div>
-                                </div>
+                            </div>
 
-                            </a>
+        
 
-                        </div>
+                            <div id="accordion-{{page.id}}" class="accordion  mx-auto my-4 " >
+                                <div class="accordion__item">
+                                    <div class="accordion__header border-0 collapsed" data-toggle="collapse" data-target="#bordered_collapse{{page.id}}" > <span class="accordion__header--text">View details</span>
+                                        <span class="accordion__header--indicator"></span>
+                                    </div>
+                                    <div id="bordered_collapse{{page.id}}" class="accordion__body collapse" data-parent="#accordion-{{page.id}}" style="">
+                                        <div class="accordion__body--text pb-5">
 
-                        <style>
+                                            {% if page.get_quiz_page_elements %}
+                                            Quiz page elements: <br>
+                                            {% for e in page.get_quiz_page_elements %}
+                                                <br>
+                                                {{e.position}}. {% if e.get_element_type.element.title %}
+                                                {{e.get_element_type.element.title}}
+                                                {% else %}
+                                                No title added to page element
+                                                {% endif %}
+                                                <br>
+                                                <small class="text-align-right ml-auto" style="float: right !important;">
 
-                            .accordion-bg1-solid .accordion__header {
-                                background-color:rgba(0, 125, 136, 0.6)!important";
-                                border-color:rgba(0, 125, 136, 0.6)!important";
-                                color: #fff;
-                                box-shadow:rgba(0, 125, 136, 0.6)!important";
-                                border-bottom-left-radius: 0;
-                                border-bottom-right-radius: 0;
-                            }
-                        </style>
-
-                        <div id="accordion-{{page.id}}" class="accordion accordion-bg1-solid w-75 mx-auto">
-                            <div class="accordion__item">
-                                <div class="accordion__header collapsed" data-toggle="collapse" data-target="#bordered_collapse{{page.id}}" > <span class="accordion__header--text">View details</span>
-                                    <span class="accordion__header--indicator"></span>
-                                </div>
-                                <div id="bordered_collapse{{page.id}}" class="accordion__body collapse" data-parent="#accordion-{{page.id}}" style="">
-                                    <div class="accordion__body--text px-5">
-
-                                        {% if page.get_quiz_page_elements %}
-                                        {% for e in page.get_quiz_page_elements %}
-                                            <br>
-                                            {{e.position}}. {% if e.get_element_type.element.title %}
-                                            {{e.get_element_type.element.title}}
+                                                    <i class="text-small">
+                                                        
+                                                        ({{e.get_element_type.type}})
+                                                    </i>
+                                                </small>
+                                            {% endfor %}
                                             {% else %}
-                                            No title added to page element
+                                            No page elements added. Click edit to add an element!
+                                            
                                             {% endif %}
-                                            <br>
-                                            <small class="text-align-right ml-auto" style="float: right !important;">
-
-                                                <i class="text-small">
-                                                    
-                                                    ({{e.get_element_type.type}})
-                                                </i>
-                                            </small>
-                                        {% endfor %}
-                                        {% else %}
-                                        No page elements added. Click edit to add an element!
-                                        
-                                        {% endif %}
-                                        
+                                            
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -189,26 +175,14 @@
                             <h4 class="text-black fs-20"></h4>
                             <p class="fs-13 mb-0 text-black">Editing quiz: {{user_quiz.name}}</p>
                         </div>
-                        {% comment %} <div class="card-action card-tabs mr-4 mt-3 mt-sm-0 mb-3">
-                            <ul class="nav nav-tabs" role="tablist">
-                                <li class="nav-item">
-                                    <a class="nav-link" data-toggle="tab" href="#All" role="tab" aria-selected="false">All</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link active" data-toggle="tab" href="#Unifinshed" role="tab" aria-selected="true">Unifinshed</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" data-toggle="tab" href="#Finished" role="tab">Finished</a>
-                                </li>
-                            </ul>
-                        </div> {% endcomment %}
+        
                         
     
-                        <button type="button" class="btn btn-primary site-button mb-2" data-toggle="modal" data-target="#exampleModalCenter">Add quiz page</button>
+                        <button type="button" class="btn btn-primary site-button " data-toggle="modal" data-target="#exampleModalCenter">Add quiz page</button>
 
 
 
-                                </div>
+                    </div>
                     {% endif %}
                     </div>
                     </div>
