--- a/src/quizCreation/templates/element_forms/AddChoiceMultipleChoiceModal.html
+++ b/src/quizCreation/templates/element_forms/AddChoiceMultipleChoiceModal.html
@@ -202,7 +202,7 @@
                    {% endif %}
 
                 >
-                    Finished changing
+                    Load changes
 
                 </a>
             </div>
