--- a/src/quizCreation/templates/element_forms/AddChoiceSingleChoiceModal.html
+++ b/src/quizCreation/templates/element_forms/AddChoiceSingleChoiceModal.html
@@ -199,7 +199,7 @@
                    {% endif %}
 
                 >
-                    Finished changing
+                    Load changes
 
                 </a>
             </div>
