--- a/src/quizCreation/templates/element_forms/AddRowAgreeDisagreeModal.html
+++ b/src/quizCreation/templates/element_forms/AddRowAgreeDisagreeModal.html
@@ -72,7 +72,7 @@
                    {% endif %}
 
                 >
-                    Finished changing
+                    Load changes
 
                 </a>
             </div>
