--- a/src/quizCreation/templates/quiz_page_elements.html
+++ b/src/quizCreation/templates/quiz_page_elements.html
@@ -163,7 +163,7 @@
                                 {% for e in element.element.get_multiple_choice_choices %}
                         
                                     <li class="border border-1 p-3 rounded border-dark my-4  mx-3 d-flex" 
-                                    style="justify-content: center; align-items: center;width:15rem;max-width;fit-content">
+                                    style="justify-content: center; align-items: center;max-width;fit-content">
                                         <div class="text-center">
 
                                             <img style="max-width:;max-height:3rem;" src="{% if e.image %}{{e.image.url}}{% endif %}" alt="">
@@ -188,7 +188,7 @@
                             <ul class="list-group list-group-horizontal-sm">
                                 {% for e in element.element.get_single_choice_choices %}
                                 <li class="border border-1 p-3 rounded border-dark my-4 mx-3 d-flex" 
-                                style="justify-content: center; align-items: center;width:15rem;max-width:fit-content;">
+                                style="justify-content: center; align-items: center;max-width:fit-content;">
                                     <div class="text-center">
 
                                         <img style="max-width:;max-height:3rem;" src="{% if e.image %}{{e.image.url}}{% endif %}" alt="">
@@ -210,7 +210,7 @@
                             <ul class="list-group list-group-horizontal-sm">
                                 {% for e in element.element.get_agree_disagree_rows %}
                                 <li class="border border-1 p-3 rounded border-dark my-4 mx-3 d-flex" 
-                                style="justify-content: center; align-items: center;width:15rem;max-width:fit-content;">
+                                style="justify-content: center; align-items: center;max-width:fit-content;">
                                     <div class="text-center">
 
                                         <br>
