--- a/src/quizData/templates/quizData/response_table.html
+++ b/src/quizData/templates/quizData/response_table.html
@@ -7,13 +7,13 @@
         
         
         <div class="row">
-            <div class="col-12">
+            {% comment %} <div class="col-12">
 
                 
                 <a type="button" class="float-right btn btn-primary site-button my-4"
                 target="_blank" href="{% url 'download_csv_of_responses' quiz.id %}">
                 Download all responses as CSV <i class="fa fa-download"></i></a>
-            </div>
+            </div> {% endcomment %}
         </div>
     <div class="row  mx-auto" style="gap:1.5rem;justify-content: center;">
 
