--- a/src/quizCreation/templates/element_forms/AddRowAgreeDisagreeModal.html
+++ b/src/quizCreation/templates/element_forms/AddRowAgreeDisagreeModal.html
@@ -6,7 +6,7 @@
     </div>
     <div class="modal-body">
         {% if not choices %}
-            <div class="text-center my-5">No choices added yet</div>
+            <div class="text-center my-5">No questions added yet</div>
         {% else %}
             <div class="table-responsive my-2">
                 <table class="table">
