--- a/src/quizRender/templates/take_quiz_elements/agree_disagree_row.html
+++ b/src/quizRender/templates/take_quiz_elements/agree_disagree_row.html
@@ -10,23 +10,23 @@
         hx-get={% url 'get_value_stored_in_db_agree_disagree'  quiz_page.quiz.id element.id response_id  question.id %}
         {% endif %}
         >
-        <td class="py-5">
+        <td class="border-dark"  class="py-5">
             {{question.title}}
         </td>
-        <td class="py-5"     
+        <td class="border-dark"  class="py-5"     
     >
             <label class="radio-inline mr-3"><input type="radio" name="{{question.id}}" value="Mostly agree" ></label>
         </td>
-        <td class="py-5">
+        <td class="border-dark"  class="py-5">
             <label class="radio-inline mr-3"><input type="radio" name="{{question.id}}" value="Agree"></label>
         </td>
-        <td class="py-5">
+        <td class="border-dark"  class="py-5">
             <label class="radio-inline mr-3"><input type="radio" name="{{question.id}}" value="Not sure"></label>
         </td>
-        <td class="py-5">
+        <td class="border-dark"  class="py-5">
             <label class="radio-inline mr-3"><input type="radio" name="{{question.id}}" value="Disagree"></label>
         </td>
-        <td class="py-5">
+        <td class="border-dark"  class="py-5">
             <label class="radio-inline mr-3"><input type="radio" name="{{question.id}}" value="Mostly disagree"></label>
         </td>
     </tr>
