--- a/src/quizCreation/templates/create_quiz.html
+++ b/src/quizCreation/templates/create_quiz.html
@@ -18,7 +18,7 @@
 
 
             <div class="mb-3">
-                <label class="form-label" for="">Enter a name kjhfor your quiz</label>
+                <label class="form-label" for="">Enter a name for your quiz</label>
                 <input type="text" name="quiz_name"
                        class="form-control" id="name" placeholder="Enter here"
                        required="" maxlength=300>
