--- a/src/quizCreation/templates/element_forms/TextInput.html
+++ b/src/quizCreation/templates/element_forms/TextInput.html
@@ -25,7 +25,7 @@
         {% endfor %}
 
         <div class="my-3 text-center">
-            <button
+            <a
                 {% if not edit %}
                     hx-get={% url 'all_element_swatches' user_quiz.id quiz_page.id %} hx-trigger=click
                     hx-target='#modalContent' hx-swap=outerHTML
@@ -39,8 +39,12 @@
                 {% else %}
                     Go back
                 {% endif %}
-            </button>
-            <button type="submit" class="btn btn-primary site-button">{% if edit %}Save{% else %}Add{% endif %}</button>
+            </a>
+            <button id="addQuestion" type="submit" class="btn btn-primary site-button">{% if edit %}Save{% else %}Add{% endif %}</button>
+            <script>
+                document.querySelector('#addQuestion').focus()
+            </script>
+       
         </div>
     </form>
 
