--- a/src/quizRender/templates/take_quiz_elements/agree_disagree_table.html
+++ b/src/quizRender/templates/take_quiz_elements/agree_disagree_table.html
@@ -1,30 +1,46 @@
-<div class="border border-3 border-dark p-3">
+<div class="table-responsive">
 
 
-<table class="">
-    <thead>
+<table class="table header-border table-bordered table-responsive-sm">
+    <thead class=>
+        <strong>
+
         <tr>
-            <td style="width:40%">
-                Question
+            <td class="border-dark"  style="width:40%">
+                <strong>
+                    Question
+                </strong>
             </td>
-            <td>
-                Mostly agree
+            <td class="border-dark" >
+                <strong>
+                    Mostly agree
+                </strong>
             </td>
-            <td>
-                Agree
+            <td class="border-dark" >
+                <strong>
+                    Agree
+                </strong>
             </td>
-            <td>
-                Not sure
+            <td class="border-dark" >
+                <strong>
+                    Not sure
+                </strong>
             </td>
-            <td>
-                Disagree
+            <td class="border-dark" >
+                <strong>
+                    Disagree
+                </strong>
             </td>
-            <td>
-                Mostly disagree
+            <td class="border-dark" >
+                <strong>
+                    Mostly disagree
+                </strong>
             </td>
         </tr>
+        
     </thead>
 
+        
     {% for question in  element.get_element_type.element.get_agree_disagree_rows %}
         {% include 'take_quiz_elements/agree_disagree_row.html' %}
     {% endfor %}
