--- a/src/quizRender/templates/take_quiz/includes/header.html
+++ b/src/quizRender/templates/take_quiz/includes/header.html
@@ -40,11 +40,15 @@
         .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
             {{site.site_headings_css}}
         }
+
+
     {% endautoescape %}
 
     :root {
         --bs-body-bg: #ffffff;
     }
+
+  
 </style>
 
 <!DOCTYPE html>
@@ -97,4 +101,10 @@
         {% endif %}
 
     </head>
+
+    <style>
+        body {
+            color: #302929;
+        }
+    </style>
 
