--- a/src/quizRender/templates/take_quiz_elements/char_input_element.html
+++ b/src/quizRender/templates/take_quiz_elements/char_input_element.html
@@ -5,4 +5,4 @@
         hx-get={% url 'get_value_stored_in_db'  quiz_page.quiz.id element.id response_id%}
     {% endif %}
     {% if answer %}value="{{answer.answer}}"{% endif %}
-    id="question_{{element.id}}" name="{{element.id}}" class="form-control my-2 border-dark" placeholder="{{element.get_element_type.element.title}}"  style="color: rgb(45, 52, 61);"  type="text" maxlength=2000>
+    id="question_{{element.id}}" name="{{element.id}}" class="form-control my-2 border-dark" placeholder="Enter text here"  style="color: rgb(45, 52, 61);"  type="text" maxlength=2000>
