--- a/src/templates/dashboard2/includes/header.html
+++ b/src/templates/dashboard2/includes/header.html
@@ -109,7 +109,7 @@
             }
 
             body {
-                color: #302929 !important;
+                color: #302929;
             }
 
             .site-color {
