--- a/src/templates/home_site2/index.html
+++ b/src/templates/home_site2/index.html
@@ -16,21 +16,21 @@
 
 			{% comment %} Start main section {% endcomment %}
 
-    <div class="row flex-lg-row align-items-center py-5">
+    <div class="row flex-lg-row align-items-center">
 
         <div class="col-lg-6">
             <h1 class="display-5 fw-bold lh-1 mb-3">
-                Increase leads with our quiz
+                
+                Customizable quizes and surveys. Increase your responses.
 
             </h1>
             <h2 class="lead fs-3">
-                A/B Testing, Custom quiz logic and conversion API integration
+                quizElements makes it easy to generate responses and leads
             </h2>
             <div class="text-align-center;">
 
-                <div class="d-grid gap-2 d-md-flex justify-content-md-center">
-                    <a href="{% url 'register_user' %}" type="button" class="btn btn-primary btn-lg site-button px-4 me-md-2 mx-1">Learn more</a>
-                    <a href="{% url 'wagtail_serve' '' %}category/all" class="btn btn-outline-secondary btn-lg px-4 mx-1">View blog posts</a>
+                <div class="d-grid gap-2 d-md-flex justify-content-md-center text-center">
+                    <a href="{% url 'register_user' %}" type="button" class="btn btn-primary btn-lg site-button px-4 me-md-2 mx-1">Start now</a>
                 </div>
                 <p class="text-center">Start your free trial today. No credit card required
                 </p>
@@ -42,14 +42,13 @@
         <div class="col-10 col-sm-8 col-lg-6 mx-auto " >
             <img
                 src=""
-                class="d-block mx-lg-auto img-fluid shadow-lg  rounded" alt="quiz example" loading="lazy"
+                class="d-block mx-lg-auto img-fluid shadow-lg  rounded" alt="quizElements quiz survey creation creator on laptop" loading="lazy"
                 style="max-height:30rem;" >
         </div>
     </div>
 
 			{% comment %} End main section {% endcomment %}
 
-    {% include 'dashboard2/components/subscription_choices.html' %}
 
 
 
