Collectstaic and also fix login

--- a/src/templates/home_site2/index.html
+++ b/src/templates/home_site2/index.html
@@ -41,7 +41,7 @@
 
         <div class="col-10 col-sm-8 col-lg-6 mx-auto " >
             <img
-                src="{% static ' ' %}"
+                src="{% static 'images/laptop-mockup-quiz-creator.jpg' %}"
                 class="d-block mx-lg-auto img-fluid shadow-lg  rounded" alt="quizElements quiz survey creation creator on laptop" loading="lazy"
                 style="max-height:30rem;" >
         </div>
