--- a/src/quizCreation/templates/quiz_settings/analytics_script_form.html
+++ b/src/quizCreation/templates/quiz_settings/analytics_script_form.html
@@ -4,6 +4,7 @@
     hx-swap="outerHTML"
     hx-target="#analyticsScriptForm"
     hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
+    class="my-4"
 
 >
 
