--- a/src/quizCreation/templates/quiz_page_edit.html
+++ b/src/quizCreation/templates/quiz_page_edit.html
@@ -20,8 +20,8 @@
     >
     </div>
 
-    <div class="row p">
-        <div class="mx-auto w-100 border border-dark border-1 p-4 text-center"  style="border-style:dashed !important">
+    <div class="row px-5">
+        <div class="mx-auto w-100 border border-dark border-1 text-center p-5"  style="border-style:dashed !important">
             <div class="">
                 <button type="button" class="btn btn-primary site-button mb-2"
                         data-toggle="modal" data-target="#exampleModalCenter"
