--- a/src/quizCreation/templates/quiz_page_elements.html
+++ b/src/quizCreation/templates/quiz_page_elements.html
@@ -32,14 +32,19 @@
             </div>
 
             <div class="mx-auto w-100 border border-1 border-dark p-2"  style="border-style:dashed !important">
-                {% if not element.type == "Text element" %}
 
-                    <a type="button" class="btn btn-primary site-button float-right text-right" data-toggle="modal" data-target="#editModal_{{element.element.page_element.id}}">
+                    <a  
+                    {% if  element.type == "Text element" %}
+                    href="{% url 'get_text_element_edit_form' user_quiz.id element.element.page_element.id %}"
+                    {% else %}
+                    data-toggle="modal" data-target="#editModal_{{element.element.page_element.id}}"#
+                    {% endif %}
+                    type="button" class="btn btn-primary site-button float-right text-right" 
+                    >
                         <span type="button" class="">
                             Edit <i class="fa fa-edit"></i>
                         </span>
                     </a>
-                {% endif %}
 
                 <div class="modal fade" id="editModal_{{element.element.page_element.id}}">
                     <div class="modal-dialog" role="document">
@@ -74,14 +79,7 @@
 
                                     {% if element.type == "Text element" %}
 
-                                        <div
-                                            hx-trigger="load"
-                                            hx-get={% url 'get_text_element_edit_form' user_quiz.id element.element.page_element.id %}
-                                            hx-target="#editModalContent{{element.element.page_element.id}}"
-                                            hx-swap="innerHTML"
-
-
-                                        ></div>
+                              
 
 
                                     {% else %}
