--- a/src/templates/home_site2/index.html
+++ b/src/templates/home_site2/index.html
@@ -21,16 +21,16 @@
         <div class="col-lg-6">
             <h1 class="display-5 fw-bold lh-1 mb-3">
                 
-                Customizable quizes and surveys. Increase your responses.
+                Customizable quizes and surveys that generate responses
 
             </h1>
             <h2 class="lead fs-3">
-                quizElements makes it easy to generate responses and leads
+                quizElements makes it easy to create quizes and surveys
             </h2>
             <div class="text-align-center;">
 
                 <div class="d-grid gap-2 d-md-flex justify-content-md-center text-center">
-                    <a href="{% url 'register_user' %}" type="button" class="btn btn-primary btn-lg site-button px-4 me-md-2 mx-1">Start now</a>
+                    <a href="{% url 'register_user' %}" type="button" class="btn btn-primary btn-lg site-button px-4 me-md-2 mx-1">Start free trial now</a>
                 </div>
                 <p class="text-center">Start your free trial today. No credit card required
                 </p>
