--- a/src/quizCreation/templates/questions_page.html
+++ b/src/quizCreation/templates/questions_page.html
@@ -50,7 +50,7 @@
                 </div>
 
                 <a target="_blank" href="{% if request.is_secure %}https://{% else %}http://{% endif %}{{request.get_host}}{% url 'take_quiz' user_quiz.id %}" type="button" class="btn btn-primary site-secondary-button mb-2 ml-auto text-right">Link to take quiz</a>
-                <a href="" type="button" class="btn btn-primary site-secondary-button mb-2 ml-auto text-right">Edit quiz completion page </a>
+                <a href="{% url 'edit_quiz_completion_page' user_quiz.id %}" type="button" class="btn btn-primary site-secondary-button mb-2 ml-auto text-right">Edit quiz completion page </a>
 
                 <button type="button" class="btn btn-primary site-secondary-button  mb-2 ml-auto text-right" data-toggle="modal" data-target="#quizSettingsModal">Quiz settings</button>
 
