Render frontend of confirmation page settings, improve general layout

--- a/src/quizCreation/templates/element_forms/edit_text_element_page.html
+++ b/src/quizCreation/templates/element_forms/edit_text_element_page.html
@@ -8,7 +8,7 @@
     <a 
     href={% url 'quiz_page_edit' user_quiz.id quiz_page.id %} 
     class="">
-        < Go back
+        < Back
     </a>
 
     <div class="card mx-auto mt-3">
