--- a/src/quizCreation/templates/quiz_page_edit.html
+++ b/src/quizCreation/templates/quiz_page_edit.html
@@ -3,15 +3,15 @@
 {% load static %}
 {% block content %}
 
-<div class="col-lg-9 my-5 mx-auto justify-content-center">
+<div class="col-lg-9  mx-auto justify-content-center">
 
 
 <a href="{% url 'edit_quiz' quiz_page.quiz.id %}">
-    <p class="">< Editing quiz page: {{quiz_page.title}}</p>
+    <p class="">< Back</p>
 </a>
-<div class="card  mx-auto py-5 ">
+<div class="card  mx-auto py-4 ">
 
-
+    <h5 class="mx-3 mb-3">Editing quiz page: {{quiz_page.title}}</h5>
 
 
     <div
